Add CarServiceException for centralized error handling across services. Implement exception handling in LogDataServiceImpl, CarSummaryServiceImpl, CarDBInitializer, and CarCsvParser to throw CarServiceException on errors. Enhance GlobalExceptionHandler to manage CarServiceException responses.